--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -16,3 +16,10 @@
 .Toolbar nav {
     height: 100%
 }
+
+/* Mobile */
+@media (max-width: 499px) {
+    .DesktopOnly {
+        display: none;
+    }
+}
