--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -6,6 +6,7 @@
     left: 0;
     background-color: #703B09;
     display: flex;
+    /* This creates the gap between the content */
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
